<resources>
    <string name="app_name">GDOU Internet Auth</string>
    <string name="password">PassWord</string>
    <string name="user_login">User Login</string>
    <string name="user_name">User_name</string>
    <string name="button2">Login</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="remember_password">Remember password</string>
    <string name="webview">WebView</string>
    <string name="logout">Logout</string>
    <string name="auto_login">auto Login</string>
    <string name="LoginConfig">Login Config</string>
    <string name="strict_bind">strict_bind</string>
    <string name="double_stack" translatable="false">double_stack</string>
    <string name="openSource1">https://github.com/zu1k/srun \n zu1k</string>
    <string name="AboutOpenSource">开源相关</string>
    <string name="check_update">check update</string>
    <string name="start_auto_login">auto refresh acid</string>
    <string name="ip">网关ip</string>
    <string name="save">保存</string>
    <string name="ac_id">ac_id</string>
    <string name="try_counts">尝试次数</string>
    <string name="login_timeout">登录超时时间</string>
    <string name="max_try">输入登录最多尝试次数</string>
    <string name="max_time">输入登录最多尝试时间</string>
</resources>
